--- a/StingApp/src/index.html
+++ b/StingApp/src/index.html
@@ -9,10 +9,9 @@
   <link rel="icon" type="image/png" href="../assets/images/favicon.png">
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root></app-root>  
 </body>
 </html>
