--- a/StingApp/src/index.html
+++ b/StingApp/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>StingApp</title>
+  <title>Sting</title>
   <base href="/">  
   <link rel="icon" type="image/png" href="../assets/images/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
